prusti-tests/tests/typecheck/ui/abstract-predicates/invalid-sig-1.stderr
error[E0308]: mismatched types
  --> $DIR/invalid-sig-1.rs:15:13
   |
15 |             42 //~ ERROR: mismatched types
   |             ^^ expected `bool`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
